# Logic_era_assignment

./: Implementation.md  README.md  app.py  models.py  pyproject.toml  run_api.py
conf/: config.yaml
prompts/: prompts.yaml
src/api/: client.py  server.py
src/config/: settings.py
src/core/: llm_manager.py  models.py  text_processor.py  web_scraper.py
src/utils/: utils.py
src/web/: streamlit_app.py
